--- a/index.html
+++ b/index.html
@@ -1,15 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="estilo.css">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
 
-  <body>
-    
+<head>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="estilo.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-    <script src="script.js"></script>
-  </body>
+<body>
+  <div class="tela2">
+  <header class="topo-tela2">
+    <h1>BuzzQuizz</h1>
+  </header>
+  <div class="titulo-quizz-tela2">
+    <h1>Titulo do Quizz</h1>
+  </div>
+  <div class="caixaquizz-tela2">
+    <div class="caixa-perguntas">
+      <div class="pergunta">
+        <h1>Em qual animal Olho-Tonto Moody transfigurou Malfoy?</h1>
+      </div>
+      <div class="caixa-respostas">
+        <div class="caixa-respostas-esquerda">
+          <div class="resposta-figura">
+            <img src="./imagens-tela2/gatineo.png" />
+            <h1 class="resposta-texto">Gatineo</h1>
+          </div>
+          <div class="resposta-figura">
+            <img src="./imagens-tela2/gatineo.png" />
+            <h1 class="resposta-texto">Gatineo</h1>
+          </div>
+        </div>
+        <div class="caixa-respostas-direita">
+          <div class="resposta-figura">
+            <img src="./imagens-tela2/gatineo.png" />
+            <h1 class="resposta-texto">Gatineo</h1>
+          </div>
+          <div class="resposta-figura">
+            <img src="./imagens-tela2/gatineo.png" />
+            <h1 class="resposta-texto">Gatineo</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="caixa-perguntas">
+      <div class="pergunta">
+        <h1>Em qual animal Olho-Tonto Moody transfigurou Malfoy?</h1>
+      </div>
+      <div class="caixa-respostas">
+        <div class="caixa-respostas-esquerda">
+          <div class="resposta-figura">
+            <img src="./imagens-tela2/gatineo.png" />
+            <h1 class="resposta-texto">Gatineo</h1>
+          </div>
+          <div class="resposta-figura">
+            <img src="./imagens-tela2/gatineo.png" />
+            <h1 class="resposta-texto">Gatineo</h1>
+          </div>
+        </div>
+        <div class="caixa-respostas-direita">
+          <div class="resposta-figura">
+            <img src="./imagens-tela2/gatineo.png" />
+            <h1 class="resposta-texto">Gatineo</h1>
+          </div>
+          <div class="resposta-figura">
+            <img src="./imagens-tela2/gatineo.png" />
+            <h1 class="resposta-texto">Gatineo</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <script src="script.js"></script>
+</body>
+
 </html>
