--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
     </div>
 
   </div>
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="script.js"></script>
 </body>
 
