versao tela 2 renderizando quizzes

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
 
-  <div class="tela2 escondido">
+  <div class="tela2">
 
     <header class="topo-tela2">
       <h1>BuzzQuizz</h1>
     </header>
     <div class="titulo-quizz-tela2">
+      <img src="./imagens-tela2/potter.png" />
       <h1>Titulo do Quizz</h1>
     </div>
-    
     <div class="caixaquizz-tela2">
       <div class="caixa-perguntas">
         <div class="pergunta">
@@ -28,22 +28,38 @@
         <div class="caixa-respostas">
           <div class="caixa-respostas-esquerda">
             <div class="resposta-figura">
-              <img src="./imagens-tela2/gatineo.png" />
-              <h1 class="resposta-texto">Gatineo</h1>
+              <div class="figura">
+                <img src="./imagens-tela2/gatineo.png" />
+              </div>
+              <div class="resposta">
+                <h1 class="resposta-texto">Gatineo</h1>
+              </div>
             </div>
             <div class="resposta-figura">
-              <img src="./imagens-tela2/gatineo.png" />
-              <h1 class="resposta-texto">Gatineo</h1>
+              <div class="figura">
+                <img src="./imagens-tela2/gatineo.png" />
+              </div>
+              <div class="resposta">
+                <h1 class="resposta-texto">Gatineo</h1>
+              </div>
             </div>
           </div>
           <div class="caixa-respostas-direita">
             <div class="resposta-figura">
-              <img src="./imagens-tela2/gatineo.png" />
-              <h1 class="resposta-texto">Gatineo</h1>
+              <div class="figura">
+                <img src="./imagens-tela2/gatineo.png" />
+              </div>
+              <div class="resposta">
+                <h1 class="resposta-texto">Gatineo</h1>
+              </div>
             </div>
             <div class="resposta-figura">
-              <img src="./imagens-tela2/gatineo.png" />
-              <h1 class="resposta-texto">Gatineo</h1>
+              <div class="figura">
+                <img src="./imagens-tela2/gatineo.png" />
+              </div>
+              <div class="resposta">
+                <h1 class="resposta-texto">Gatineo</h1>
+              </div>
             </div>
           </div>
         </div>
@@ -55,22 +71,38 @@
         <div class="caixa-respostas">
           <div class="caixa-respostas-esquerda">
             <div class="resposta-figura">
-              <img src="./imagens-tela2/gatineo.png" />
-              <h1 class="resposta-texto">Gatineo</h1>
+              <div class="figura">
+                <img src="./imagens-tela2/gatineo.png" />
+              </div>
+              <div class="resposta">
+                <h1 class="resposta-texto">Gatineo</h1>
+              </div>
             </div>
             <div class="resposta-figura">
-              <img src="./imagens-tela2/gatineo.png" />
-              <h1 class="resposta-texto">Gatineo</h1>
+              <div class="figura">
+                <img src="./imagens-tela2/gatineo.png" />
+              </div>
+              <div class="resposta">
+                <h1 class="resposta-texto">Gatineo</h1>
+              </div>
             </div>
           </div>
           <div class="caixa-respostas-direita">
             <div class="resposta-figura">
-              <img src="./imagens-tela2/gatineo.png" />
-              <h1 class="resposta-texto">Gatineo</h1>
+              <div class="figura">
+                <img src="./imagens-tela2/gatineo.png" />
+              </div>
+              <div class="resposta">
+                <h1 class="resposta-texto">Gatineo</h1>
+              </div>
             </div>
             <div class="resposta-figura">
-              <img src="./imagens-tela2/gatineo.png" />
-              <h1 class="resposta-texto">Gatineo</h1>
+              <div class="figura">
+                <img src="./imagens-tela2/gatineo.png" />
+              </div>
+              <div class="resposta">
+                <h1 class="resposta-texto">Gatineo</h1>
+              </div>
             </div>
           </div>
         </div>
@@ -89,8 +121,10 @@
           </div>
         </div>
       </div>
-        <button class="reiniciar-quizz">Reiniciar Quizz</button>
-        <div class="voltar"><h1>Voltar para home</h1></div>
+      <button class="reiniciar-quizz">Reiniciar Quizz</button>
+      <div class="voltar">
+        <h1>Voltar para home</h1>
+      </div>
     </div>
   </div>
 
@@ -159,7 +193,7 @@
 
     </div>
 
-    <div class="tela3-4 visivel">
+    <div class="tela3-4">
       <header>BuzzQuizz</header>
       <h1>Seu quizz está pronto!</h1>
 
@@ -173,7 +207,7 @@
     </div>
 
   </div>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="script.js"></script>
 </body>
