--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="tela1-tudo">
+  <div class="tela1">
     <div class="tela1-topo">BuzzQuizz</div>
     <div class="tela1-conteudo">
       <div class="tela1-criarQuizz">
@@ -28,7 +28,7 @@
 
          <div class="quizz escondido">
             <img src="https://img.estadao.com.br/thumbs/640/resources/jpg/2/1/1649110304012.jpg"/>
-            </div>>
+            </div>
           <div class="quizz escondido">
             <img class="gradiente"
               src="https://img.estadao.com.br/thumbs/640/resources/jpg/2/1/1649110304012.jpg"/>
@@ -220,7 +220,7 @@
         
       </div>
 
-      <button>Acessar Quizz</button>
+      <button onclick="acessaQuizz()">Acessar Quizz</button>
       <div onclick="voltarHome()"class="voltar">Voltar pra home</div>
     </div>
 
@@ -228,6 +228,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   <script src="script.js"></script>
+  <script src="script-Joao.js"></script>
   <script src="script-Raissa.js"></script>
 </body>
 
