tela 1 quase completa

--- a/index.html
+++ b/index.html
@@ -17,31 +17,31 @@
  
     <div class="tela1-topo">BuzzQuizz</div>
     <div class="tela1-conteudo">
-      <div class="tela1-criarQuizz">
+      <div class="tela1-criarQuizz escondido">
         <div>Você não criou nenhum<br>quizz ainda :(</br></div>
         <div onclick="criacaoDeQuizz()" class="tela1-botao">
           <div>Criar Quizz</div>
         </div>
         </div>
         <div class="seusQuizzes-titulo escondido">
-          <div>Seus Quizzes</div>
+          <div class="seusQuizzesTitulo">
+          <div class="seusQuizzes">Seus Quizzes</div>
           <ion-icon onclick="criacaoDeQuizz()" class="iconeMais" name="add-circle"></ion-icon>
-        </div>
-        <div class="tela1-seusQuizzes">
-
-         <div class="quizz escondido">
-            <img src="https://img.estadao.com.br/thumbs/640/resources/jpg/2/1/1649110304012.jpg"/>
-            </div>
-          <div class="quizz escondido">
-            <img class="gradiente"
-              src="https://img.estadao.com.br/thumbs/640/resources/jpg/2/1/1649110304012.jpg"/>
           </div>
+          <div class="espaco"></div>
+          <div class="espaco"></div>
         </div>
+        <div class="tela1-seusQuizzes escondido">
+          <div class="espaco"></div>
+          <div class="espaco"></div>
+                </div>
         <div class="todosOsQuizzes-titulo">
                     <div class="todosOsQuizzesTitulo">Todos os Quizzes</div>
+                    <div class="espaco"></div>
+                    <div class="espaco"></div>
         </div>
         <div class="tela1-todosOsQuizzes">
-                </div>
+        </div>
       </div>
     </div>
   
